Fixed an alignment issue.

--- a/src/jsontree.js.scss
+++ b/src/jsontree.js.scss
@@ -318,6 +318,7 @@ div.json-tree-js {
 
         div.status-text {
             flex-grow: 1;
+            text-align: left !important;
         }
 
         div.status-value-data-type,
